syntax = "proto3";

package autokitteh.triggers.v1;

import "autokitteh/program/v1/program.proto";
import "buf/validate/validate.proto";

message Trigger {
  string trigger_id = 1;
  string connection_id = 2;
  string env_id = 3; // if empty, applies to all envs.
  string event_type = 4 [(buf.validate.field).string.min_len = 1];
  program.v1.CodeLocation code_location = 5 [(buf.validate.field).required = true];
  string filter = 6;
}
